[project]
name = "ErisPulse-GetSeTu"     # 模块名称, 建议使用 ErisPulse-<模块名称> 的格式命名
version = "1.0.0"
description = "一个非常哇塞的模块"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "ShanFish", email = "zcsfish@qq.com" } ]
dependencies = [
    
]

[project.urls]
"homepage" = "https://github.com/shanfishapp/ErisPulse-GetSeTu"

[project.entry-points]
"erispulse.module" = { "MyModule" = "MyModule:Main" }